Only highlight sections when the cursor hovers on the label, not the polygon, to avoid condusing flickering when the cursor rolls onto a burial.

--- a/public/src/stylesheets/map.less
+++ b/public/src/stylesheets/map.less
@@ -27,6 +27,7 @@
 
   // Section labels:
   .leaflet-div-icon {
+
     padding: 4px;
     background: none;
     border: none;
@@ -35,6 +36,11 @@
     font-size: 12px;
     font-weight: bold;
     text-shadow: 0 0 10px white;
+
+    &.highlight {
+      color: orange;
+    }
+
   }
 
 }
